--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,141 @@
     width: 73%;  
 }
 
+    /*Watch everywhere*/
+
+.main-section .second-section-container{
+    border-top: 8px solid #222;
+    background-color: black;
+    display: flex;
+    padding: 0px 80px;
+    padding-bottom: 90px;
+}
+
+.main-section .second-section-container .left-column{
+    position: relative;
+    overflow: hidden;
+    width: 80%;
+    height: 500px;
+}
+
+.main-section .second-section-container .left-column img{
+    position: absolute;
+    margin-top: 8%;
+    margin-left: 8%;
+    width: 85%;
+}
+
+.main-section .second-section-container .left-column video{
+    margin-left: 23%;
+    margin-top: 14%;
+    width: 54%;
+}
+
+.main-section .second-section-container .right-column{
+    padding-top: 13%;
+    padding-right: 2%;
+}
+
+.main-section .second-section-container .right-column h1{
+    color: white;
+}
+
+.main-section .second-section-container .right-column h3{
+    color: white;
+    font-size: 1.4rem;
+    font-weight: normal;
+    margin-top: 5%;
+}
+
+    /*Create profile for kids*/
+
+.main-section .third-section-container{
+    border-top: 8px solid #222;
+    background-color: black;
+    display: flex;
+    padding: 0px 80px;
+    padding-bottom: 90px;
+}
+
+.main-section .third-section-container .right-column{
+    position: relative;
+    overflow: hidden;
+    width: 80%;
+    height: 500px;
+}
+
+.main-section .third-section-container .right-column img{
+    position: absolute;
+    margin-top: 15%;
+    margin-right: 20%;
+    width: 90%;
+}
+
+.main-section .third-section-container .left-column{
+    padding-top: 13%;
+    padding-right: 2%;
+    color: white; 
+}
+    /*Download your shows to watch*/
+
+.main-section .fourth-section-container{
+    border-top: 8px solid #222;
+    background-color: #000000;
+    display: flex;
+    padding: 0px 80px;
+    padding-bottom: 90px;
+} 
+.main-section .fourth-section-container .right-column{
+    padding-top: 13%;
+    padding-right: 2%;
+    color: white; 
+}
+
+.main-section .fourth-section-container .right-column .h3{
+    font-size: 1.4rem;
+    font-weight: normal;
+    margin-top: 5%;
+}
+.main-section .fourth-section-container .left-column .eleven{
+    width: 100%;
+}
+
+.main-section .fourth-section-container .left-column .box{
+    border: 2px solid rgba(255, 255, 255, .25);
+    background-color: black;
+    border-radius: 10px;
+    width: 60%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    margin-top: -22%;
+}
+
+.main-section .fourth-section-container .left-column .box .boxshot{
+    width: 15%;
+}
+
+.main-section .fourth-section-container .left-column .box p{
+    margin-left: 5%;
+    margin-top: 3%;
+    color: white;
+}
+
+.main-section .fourth-section-container .left-column .box p a{
+    text-decoration: none;
+} 
+
+.main-section .fourth-section-container .left-column .box .download-gif{
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    right: 0;
+    margin-right: 8px;
+} 
+
 /*Responsive css*/
 @media(max-width: 943px){
     /*Get started*/
@@ -183,6 +318,57 @@
         margin-top: 1.5%;
         padding: 12px;
 
+    }
+     /*Enjoy TV*/
+
+    .main-section .section-container{
+        display: block;
+    }
+    .main-section .section-container .left-column{
+        text-align: center;
+        width: 100%;
+    }
+    .main-section .section-container .right-column{
+        width: 100%;
+    }
+
+     /*Watch everywere*/
+     
+    .main-section .second-section-container{
+        display: block;
+    }
+    .main-section .second-section-container .left-column{
+        width: 100%;
+    }
+    .main-section .second-section-container .right-column{
+        width: 100%;
+        text-align: center;
+    }
+
+     /*Create profile for kids*/
+
+    .main-section .third-section-container{
+        display: block;
+    }
+    .main-section .third-section-container .left-column{
+        text-align: center;
+        width: 100%;
+    }
+    .main-section .third-section-container .right-column{
+        width: 100%;
+    }
+    
+     /*Download your shows to watch*/
+     
+    .main-section .fourth-section-container{
+        display: block;
+    }
+    .main-section .fourth-section-container .left-column{
+        width: 100%;
+    }
+    .main-section .fourth-section-container .right-column{
+        width: 100%;
+        text-align: center;
     }
 }
 
@@ -231,6 +417,34 @@
 
 }
 
+@media(max-width: 774px){
+    .main-section .section-container{
+        padding-bottom: 0px;
+    }
+
+    .main-section .third-section-container{
+        padding-bottom: 0px;
+    }
+    
+}
+
+@media(max-width: 500px){
+    .main-section .section-container .right-column{
+        height: 270px;
+    }
+
+    .main-section .second-section-container .left-column{
+        height: 200px;
+    }
+
+    .main-section .third-section-container .right-column{
+        height: 270px;
+    }
+
+    .main-section .fourth-section-container .left-column .box{
+        width: 100%;
+    }
+}
 @media(max-width: 346px){
     /*Navbar*/
     .headerNav #logo{
